Added the footer, with contact links

--- a/index.html
+++ b/index.html
@@ -88,120 +88,165 @@
           </div>
         </nav>
       </header>
-      <div class="hero">
-        <div class="hero-inner d-flex">
-          <div class="hero-text d-flex flex-column justify-content-center">
-            <h1 class="name-title">LJ FRYER</h1>
-            <div class="hero-paragraph">
-              <p>
-                An experienced teacher with a lifelong passion for STEM, I
-                decided to apply my attention to detail and problem solving
-                skills to becoming a Front End Developer. Starting my journey
-                with SheCodes ignited my passion for coding. Each SheCodes
-                workshop culminates in a final project that showcases the
-                skills, languages, tools and frameworks that bring me one step
-                closer to creating aesthetically pleasing user interfaces that
-                are intuitive and responsive.
-              </p>
-            </div>
-          </div>
-          <img
-            src="/images/profile-picture-sqr.png"
-            alt="LJ Fryer"
-            class="img-fluid hero-image"
-          />
-        </div>
-      </div>
-      <h3 class="text-center p-2 mt-3 mb-3">A sample of my projects</h3>
-      <div class="homepage">
-        <div class="row">
-          <div class="col-lg-4">
-            <div class="project-slides">
-              <img
-                src="/images/weather-app-img.png"
-                class="project-image img-fluid"
-                alt="LJ Fryer Weather App"
-              />
-              <div class="project-description d-flex flex-column">
-                <h2>Weather Project</h2>
-                <p class="mb-4">
-                  My first interactive application, I added GitHub, hosting and
-                  API integration to my developer toolbox. This app employs ES6,
-                  integrating a search engine, functions to extract data from
-                  the API and string interpolation to deliver a live, five day
-                  weather forecast.
+      <main>
+        <div class="hero">
+          <div class="hero-inner d-flex">
+            <div class="hero-text d-flex flex-column justify-content-center">
+              <h1 class="name-title">LJ FRYER</h1>
+              <div class="hero-paragraph">
+                <p>
+                  An experienced teacher with a lifelong passion for STEM, I
+                  decided to apply my attention to detail and problem solving
+                  skills to becoming a Front End Developer. Starting my journey
+                  with SheCodes ignited my passion for coding. Each SheCodes
+                  workshop culminates in a final project that showcases the
+                  skills, languages, tools and frameworks that bring me one step
+                  closer to creating aesthetically pleasing user interfaces that
+                  are intuitive and responsive.
                 </p>
-                <br />
-                <div>
-                  <a
-                    href="https://weather-app-ljf.netlify.app/"
-                    target="_blank"
-                    class="project-link"
-                    >Weather Forecast</a
-                  >
-                  <br />
-                </div>
               </div>
             </div>
-          </div>
-          <div class="col-lg-4">
-            <div class="project-slides">
-              <img
-                src="/images/ai-poem-generator-img.png"
-                class="project-image img-fluid"
-                alt="LJ Fryer Weather App"
-              />
-              <div class="project-description d-flex flex-column">
-                <h2>AI Poem Generator</h2>
-                <p class="mb-4">
-                  This project gave me an introduction to AI prompt engineering.
-                  The mission was to build an interactive text generator using
-                  Axios and the SheCodes AI API. Including animations utilising
-                  JS plugin and CSS @keyframes rule, this app was a fun build.
-                </p>
-                <br />
-                <div>
-                  <a
-                    href="https://www.shecodes.io/cohorts/2203/projects/2466767?_gl=1*1hq72fe*_gcl_au*MTAxMzM5NjkwNy4xNzM0NDEzMDIx"
-                    target="_blank"
-                    class="project-link"
-                    >AI poem for you</a
-                  >
-                  <br />
-                </div>
-              </div>
-            </div>
-          </div>
-          <div class="col-lg-4">
-            <div class="project-slides">
-              <img
-                src="/images/pole-page-img.png"
-                class="project-image img-fluid"
-                alt="Pole dance project"
-              />
-              <div class="project-description d-flex flex-column">
-                <h2>Pole Dance Project</h2>
-                <p class="mb-4">
-                  Using developer tool VS Code, I built a HTML landing page
-                  featuring CSS grids, transform properties and a linear
-                  gradient. JavaScript class manipulation allowed me to create a
-                  light/dark theme option on the page. Click image for dark
-                  theme.
-                </p>
-                <br />
-                <div>
-                  <a
-                    href="https://www.shecodes.io/cohorts/1936/projects/2443518?_gl=1*hmg0f*_gcl_au*MTAxMzM5NjkwNy4xNzM0NDEzMDIx"
-                    target="_blank"
-                    class="project-link"
-                    >passion project</a
-                  >
-                </div>
-              </div>
-            </div>
+            <img
+              src="/images/profile-picture-sqr.png"
+              alt="LJ Fryer"
+              class="img-fluid hero-image"
+            />
           </div>
         </div>
-      </div>
+        <h3 class="text-center p-2 mt-3 mb-3">A sample of my projects</h3>
+        <div class="homepage">
+          <div class="row">
+            <div class="col-lg-4">
+              <div class="project-slides">
+                <img
+                  src="/images/weather-app-img.png"
+                  class="project-image img-fluid"
+                  alt="LJ Fryer Weather App"
+                />
+                <div class="project-description d-flex flex-column">
+                  <h2>Weather Project</h2>
+                  <p class="mb-4">
+                    My first interactive application, I added GitHub, hosting
+                    and API integration to my developer toolbox. This app
+                    employs ES6, integrating a search engine, functions to
+                    extract data from the API and string interpolation to
+                    deliver a live, five day weather forecast.
+                  </p>
+                  <br />
+                  <div>
+                    <a
+                      href="https://weather-app-ljf.netlify.app/"
+                      target="_blank"
+                      class="project-link"
+                      >Weather Forecast</a
+                    >
+                    <br />
+                  </div>
+                </div>
+              </div>
+            </div>
+            <div class="col-lg-4">
+              <div class="project-slides">
+                <img
+                  src="/images/ai-poem-generator-img.png"
+                  class="project-image img-fluid"
+                  alt="LJ Fryer Weather App"
+                />
+                <div class="project-description d-flex flex-column">
+                  <h2>AI Poem Generator</h2>
+                  <p class="mb-4">
+                    This project gave me an introduction to AI prompt
+                    engineering. The mission was to build an interactive text
+                    generator using Axios and the SheCodes AI API. Including
+                    animations utilising JS plugin and CSS @keyframes rule, this
+                    app was a fun build.
+                  </p>
+                  <br />
+                  <div>
+                    <a
+                      href="https://www.shecodes.io/cohorts/2203/projects/2466767?_gl=1*1hq72fe*_gcl_au*MTAxMzM5NjkwNy4xNzM0NDEzMDIx"
+                      target="_blank"
+                      class="project-link"
+                      >AI poem for you</a
+                    >
+                    <br />
+                  </div>
+                </div>
+              </div>
+            </div>
+            <div class="col-lg-4">
+              <div class="project-slides">
+                <img
+                  src="/images/pole-page-img.png"
+                  class="project-image img-fluid"
+                  alt="Pole dance project"
+                />
+                <div class="project-description d-flex flex-column">
+                  <h2>Pole Dance Project</h2>
+                  <p class="mb-4">
+                    Using developer tool VS Code, I built a HTML landing page
+                    featuring CSS grids, transform properties and a linear
+                    gradient. JavaScript class manipulation allowed me to create
+                    a light/dark theme option on the page. Click image for dark
+                    theme.
+                  </p>
+                  <br />
+                  <div>
+                    <a
+                      href="https://www.shecodes.io/cohorts/1936/projects/2443518?_gl=1*hmg0f*_gcl_au*MTAxMzM5NjkwNy4xNzM0NDEzMDIx"
+                      target="_blank"
+                      class="project-link"
+                      >passion project</a
+                    >
+                  </div>
+                </div>
+              </div>
+            </div>
+          </div>
+        </div>
+      </main>
+      <footer class="mt-5 mb-5">
+        <div class="footer-section d-flex justify-content-between">
+          <div class="align-self-center">
+            <a
+              href="mailto:lj.fryer.001@gmail.com"
+              class="footer-email"
+              title="email me"
+              ><i class="fa-solid fa-share"></i> lj.fryer.001@gmail.com</a
+            >
+          </div>
+          <div class="d-flex slide-links">
+            <a href="https://github.com/" title="my github" target="_blank">
+              <img
+                src="/logos/github-icon-light.png"
+                class="img-fluid footer-logos"
+                alt="GitHub"
+              />
+            </a>
+            <a
+              href="https://app.netlify.com/teams/lj-fryer/sites"
+              title="my netlify"
+              target="_blank"
+            >
+              <img
+                src="/logos/netlify-logo-lightmode.png"
+                alt=""
+                class="img-fluid footer-logos"
+              />
+            </a>
+            <a
+              href="https://www.linkedin.com/in/linda-fryer-ba2294ba/"
+              title="my profile"
+              target="_blank"
+            >
+              <i
+                class="fa-brands fa-linkedin img-fluid linkedin-logo"
+                alt="LinkedIn"
+              ></i>
+            </a>
+          </div>
+        </div>
+      </footer>
     </div>
   </body>
 </html>
