--- a/about.html
+++ b/about.html
@@ -29,100 +29,93 @@
     ></script>
   </head>
   <body>
-    <main class="mb-5">
-      <div class="container">
-        <header>
-          <nav class="navbar navbar-expand-lg bg-primary-color">
-            <div class="container-fluid">
-              <a class="navbar-brand text-light" href="/" title="lj fyer">
-                <img
-                  src="/logos/ljf-logo.png"
-                  alt="lj fryer"
-                  class="ljf-logo"
-                />
-              </a>
-              <button
-                class="navbar-toggler bg-light text-light"
-                type="button"
-                data-bs-toggle="collapse"
-                data-bs-target="#navbarNav"
-                aria-controls="navbarNav"
-                aria-expanded="false"
-                aria-label="Toggle navigation"
-              >
-                <span class="navbar-toggler-icon"></span>
-              </button>
-              <div class="collapse navbar-collapse" id="navbarNav">
-                <ul class="navbar-nav">
-                  <li class="nav-item">
-                    <a
-                      class="nav-link text-light"
-                      aria-current="page"
-                      href="/"
-                      title="home"
-                      ><i class="fa-solid fa-house fs-5"></i
-                    ></a>
-                  </li>
-                  <li class="nav-item">
-                    <a
-                      class="nav-link active text-light"
-                      href="/about.html"
-                      title="about me"
-                      ><i class="fa-solid fa-circle-info fs-5"></i
-                    ></a>
-                  </li>
-                  <li class="nav-item">
-                    <a
-                      class="nav-link text-light"
-                      href="/work.html"
-                      title="my work"
-                      ><i class="fa-solid fa-folder-open fs-5"></i
-                    ></a>
-                  </li>
-                  <li class="nav-item">
-                    <a
-                      class="nav-link text-light"
-                      href="/contact.html"
-                      title="say hi"
-                      ><i class="fa-regular fa-comments fs-5"></i
-                    ></a>
-                  </li>
-                </ul>
-              </div>
-            </div>
-          </nav>
-        </header>
-        <div class="about-me">
-          <div class="about-me-inner d-flex">
-            <img
-              src="/images/trapeze-image.png"
-              alt="LJ Fryer hanging from trapeze"
-              class="img-fluid about-me-image"
-            />
-            <div
-              class="about-me-text d-flex flex-column justify-content-center"
+    <div class="container">
+      <header>
+        <nav class="navbar navbar-expand-lg bg-primary-color">
+          <div class="container-fluid">
+            <a class="navbar-brand text-light" href="/" title="lj fyer">
+              <img src="/logos/ljf-logo.png" alt="lj fryer" class="ljf-logo" />
+            </a>
+            <button
+              class="navbar-toggler bg-light text-light"
+              type="button"
+              data-bs-toggle="collapse"
+              data-bs-target="#navbarNav"
+              aria-controls="navbarNav"
+              aria-expanded="false"
+              aria-label="Toggle navigation"
             >
-              <div>
-                <h1>ABOUT ME</h1>
-              </div>
-              <div class="about-me-paragraph">
-                <p>
-                  !Dummy text - An experienced teacher with a lifelong passion
-                  for STEM, I decided to apply my attention to detail and
-                  problem solving skills to becoming a Front End Developer.
-                  Starting my journey with SheCodes ignited my passion for
-                  coding. Each SheCodes workshop culminates in a final project
-                  that showcases the skills, languages, tools and frameworks
-                  that bring me one step closer to creating aesthetically
-                  pleasing user interfaces that are intuitive and responsive.
-                </p>
-              </div>
+              <span class="navbar-toggler-icon"></span>
+            </button>
+            <div class="collapse navbar-collapse" id="navbarNav">
+              <ul class="navbar-nav">
+                <li class="nav-item">
+                  <a
+                    class="nav-link text-light"
+                    aria-current="page"
+                    href="/"
+                    title="home"
+                    ><i class="fa-solid fa-house fs-5"></i
+                  ></a>
+                </li>
+                <li class="nav-item">
+                  <a
+                    class="nav-link active text-light"
+                    href="/about.html"
+                    title="about me"
+                    ><i class="fa-solid fa-circle-info fs-5"></i
+                  ></a>
+                </li>
+                <li class="nav-item">
+                  <a
+                    class="nav-link text-light"
+                    href="/work.html"
+                    title="my work"
+                    ><i class="fa-solid fa-folder-open fs-5"></i
+                  ></a>
+                </li>
+                <li class="nav-item">
+                  <a
+                    class="nav-link text-light"
+                    href="/contact.html"
+                    title="say hi"
+                    ><i class="fa-regular fa-comments fs-5"></i
+                  ></a>
+                </li>
+              </ul>
+            </div>
+          </div>
+        </nav>
+      </header>
+      <main>
+        <div class="about-me-inner d-flex">
+          <img
+            src="/images/trapeze-image.png"
+            alt="LJ Fryer hanging from trapeze"
+            class="img-fluid about-me-image"
+          />
+          <div class="about-me-text d-flex flex-column justify-content-center">
+            <div>
+              <h1>ABOUT ME</h1>
+            </div>
+            <div class="about-me-paragraph">
+              <p>
+                !Dummy text - An experienced teacher with a lifelong passion for
+                STEM, I decided to apply my attention to detail and problem
+                solving skills to becoming a Front End Developer. Starting my
+                journey with SheCodes ignited my passion for coding. Each
+                SheCodes workshop culminates in a final project that showcases
+                the skills, languages, tools and frameworks that bring me one
+                step closer to creating aesthetically pleasing user interfaces
+                that are intuitive and responsive.
+              </p>
             </div>
           </div>
         </div>
+
         <div class="winky-face">
           <div class="personal-links mb-5 d-flex justify-content-center">
-            <a href="#" title="My Projects">
+            <a href="/work.html" title="My Projects">
               <i class="fa-regular fa-file"></i
             ></a>
             <a href="mailto:lj.fryer.001@gmail.com" title="Email me"
@@ -294,7 +287,49 @@
             </div>
           </div>
         </div>
-      </div>
-    </main>
+      </main>
+      <footer class="mt-5 mb-5">
+        <div class="footer-section d-flex justify-content-between">
+          <div class="align-self-center">
+            <a
+              href="mailto:lj.fryer.001@gmail.com"
+              class="footer-email"
+              title="email me"
+              ><i class="fa-solid fa-share"></i> lj.fryer.001@gmail.com</a
+            >
+          </div>
+          <div class="d-flex slide-links">
+            <a href="https://github.com/" title="my github" target="_blank">
+              <img
+                src="/logos/github-icon-light.png"
+                class="img-fluid footer-logos"
+                alt="GitHub"
+              />
+            </a>
+            <a
+              href="https://app.netlify.com/teams/lj-fryer/sites"
+              title="my netlify"
+              target="_blank"
+            >
+              <img
+                src="/logos/netlify-logo-lightmode.png"
+                alt=""
+                class="img-fluid footer-logos"
+              />
+            </a>
+            <a
+              href="https://www.linkedin.com/in/linda-fryer-ba2294ba/"
+              title="my profile"
+              target="_blank"
+            >
+              <i
+                class="fa-brands fa-linkedin img-fluid linkedin-logo"
+                alt="LinkedIn"
+              ></i>
+            </a>
+          </div>
+        </div>
+      </footer>
+    </div>
   </body>
 </html>
