--- a/contact.html
+++ b/contact.html
@@ -29,59 +29,63 @@
     <script src="/src/index.js"></script>
   </head>
   <body class="mb-5">
-    
     <div class="container">
       <header>
         <nav class="navbar navbar-expand-lg bg-primary-color">
-      <div class="container-fluid">
-        <a class="navbar-brand active text-light" href="/" title="lj fyer">
-          <img
-                  src="/logos/ljf-logo.png"
-                  alt="lj fryer"
-                  class="ljf-logo"
-                />
-        </a>
-        <button
-          class="navbar-toggler bg-light text-light"
-          type="button"
-          data-bs-toggle="collapse"
-          data-bs-target="#navbarNav"
-          aria-controls="navbarNav"
-          aria-expanded="false"
-          aria-label="Toggle navigation"
-        >
-          <span class="navbar-toggler-icon"></span>
-        </button>
-        <div class="collapse navbar-collapse" id="navbarNav">
-          <ul class="navbar-nav">
-            <li class="nav-item">
-              <a
-                class="nav-link text-light"
-                aria-current="page"
-                href="/"
-                title="home"
-                ><i class="fa-solid fa-house fs-5"></i
-              ></a>
-            </li>
-            <li class="nav-item">
-              <a class="nav-link text-light" href="/about.html" title="about me"
-                ><i class="fa-solid fa-circle-info fs-5"></i
-              ></a>
-            </li>
-            <li class="nav-item">
-              <a class="nav-link text-light" href="/work.html" title="my work"
-                ><i class="fa-solid fa-folder-open fs-5"></i
-              ></a>
-            </li>
-            <li class="nav-item">
-              <a class="nav-link active text-light" href="/contact.html" title="say hi"
-                ><i class="fa-regular fa-comments fs-5"></i
-              ></a>
-            </li>
-          </ul>
-        </div>
-      </div>
-    </nav>
+          <div class="container-fluid">
+            <a class="navbar-brand active text-light" href="/" title="lj fyer">
+              <img src="/logos/ljf-logo.png" alt="lj fryer" class="ljf-logo" />
+            </a>
+            <button
+              class="navbar-toggler bg-light text-light"
+              type="button"
+              data-bs-toggle="collapse"
+              data-bs-target="#navbarNav"
+              aria-controls="navbarNav"
+              aria-expanded="false"
+              aria-label="Toggle navigation"
+            >
+              <span class="navbar-toggler-icon"></span>
+            </button>
+            <div class="collapse navbar-collapse" id="navbarNav">
+              <ul class="navbar-nav">
+                <li class="nav-item">
+                  <a
+                    class="nav-link text-light"
+                    aria-current="page"
+                    href="/"
+                    title="home"
+                    ><i class="fa-solid fa-house fs-5"></i
+                  ></a>
+                </li>
+                <li class="nav-item">
+                  <a
+                    class="nav-link text-light"
+                    href="/about.html"
+                    title="about me"
+                    ><i class="fa-solid fa-circle-info fs-5"></i
+                  ></a>
+                </li>
+                <li class="nav-item">
+                  <a
+                    class="nav-link text-light"
+                    href="/work.html"
+                    title="my work"
+                    ><i class="fa-solid fa-folder-open fs-5"></i
+                  ></a>
+                </li>
+                <li class="nav-item">
+                  <a
+                    class="nav-link text-light active"
+                    href="/contact.html"
+                    title="say hi"
+                    ><i class="fa-regular fa-comments fs-5"></i
+                  ></a>
+                </li>
+              </ul>
+            </div>
+          </div>
+        </nav>
       </header>
       <main>
         <div class="contact-inner d-flex justify-content-center">
@@ -103,13 +107,14 @@
                 ><i class="fa-brands fa-linkedin"></i
               ></a>
             </div>
-            
+
             <div class="text-center mt-5">
                 <h4>my code</h4>
                 <div class="text-center mb-2">
                     <i class="fa-solid fa-chevron-down down-icon down-pointer"></i>
                 </div>
-                <div class="coding-links d-flex mt-3">
+            </div>
+            <div class="coding-links d-flex mt-3">
               <a href="https://www.shecodes.io/graduates/128619-linda-fryer" title="SheCodes Profile">
                 <img
                   src="/logos/shecodes-logo-full.png"
@@ -130,11 +135,52 @@
                   class="img-fluid slide-logos"
                 />
               </a>
-                </div>         
-            </div>
+            </div>         
           </div>
         </div>
       </main>
+      <footer class="mt-5 mb-5">
+        <div class="footer-section d-flex justify-content-between">
+          <div class="align-self-center">
+            <a
+              href="mailto:lj.fryer.001@gmail.com"
+              class="footer-email"
+              title="email me"
+              ><i class="fa-solid fa-share"></i> lj.fryer.001@gmail.com</a
+            >
+          </div>
+          <div class="d-flex slide-links">
+            <a href="https://github.com/" title="my github" target="_blank">
+              <img
+                src="/logos/github-icon-light.png"
+                class="img-fluid footer-logos"
+                alt="GitHub"
+              />
+            </a>
+            <a
+              href="https://app.netlify.com/teams/lj-fryer/sites"
+              title="my netlify"
+              target="_blank"
+            >
+              <img
+                src="/logos/netlify-logo-lightmode.png"
+                alt=""
+                class="img-fluid footer-logos"
+              />
+            </a>
+            <a
+              href="https://www.linkedin.com/in/linda-fryer-ba2294ba/"
+              title="my profile"
+              target="_blank"
+            >
+              <i
+                class="fa-brands fa-linkedin img-fluid linkedin-logo"
+                alt="LinkedIn"
+              ></i>
+            </a>
+          </div>
+        </div>
+      </footer>
     </div>
   </body>
 </html>
