--- a/work.html
+++ b/work.html
@@ -88,13 +88,11 @@
           </div>
         </nav>
       </header>
-      <main>
-        <h1 class="text-center mt-5">
-          <i class="fa-regular fa-file"></i> My Work
-        </h1>
-        <h4 class="text-center p-2 mt-3 mb-3">Check out my projects</h4>
+      <main class="mt-3">
+        <h1 class="text-center"><i class="fa-regular fa-file"></i> My Work</h1>
+        <h4 class="text-center p-2 mt-1 mb-3">Check out my projects</h4>
         <div>
-          <div class="text-center mb-5">
+          <div class="text-center mb-4">
             <i class="fa-solid fa-chevron-down down-icon"></i>
           </div>
         </div>
