Replaced shecodes logos

--- a/contact.html
+++ b/contact.html
@@ -117,7 +117,7 @@
             <div class="coding-links d-flex mt-3">
               <a href="https://www.shecodes.io/graduates/128619-linda-fryer" title="SheCodes Profile">
                 <img
-                  src="/logos/shecodes-logo-full.png"
+                  src="/logos/shecodes-logo.png"
                   alt="SheCodes"
                   class="img-fluid slide-logos"
                 />
