--- a/work.html
+++ b/work.html
@@ -204,7 +204,7 @@
                       target="_blank"
                       title="Launch SheCodes Project"
                       ><img
-                        src="/logos/shecodes-logo-full.png"
+                        src="/logos/shecodes-icon.png"
                         alt="Netlify Project Link"
                         class="slide-logos shecodes-logo"
                     /></a>
@@ -304,16 +304,16 @@
                     for dark theme.
                     <br />
                   </p>
-                  <div>
+                  <div class="d-flex">
                     <a
                       href="https://s3.amazonaws.com/shecodesio-production/challenge_submissions/files/002/247/774/original/W3_Project_1_SheCodes.html?1717937790"
                       target="_blank"
                       title="Launch SheCodes Project"
                     >
                       <img
-                        src="/logos/shecodes-logo-full.png"
+                        src="/logos/shecodes-icon.png"
                         alt="SheCodes Project Link"
-                        class="slide-logos"
+                        class="img-fluid slide-logos"
                       />
                     </a>
                     <br />
