--- a/work.html
+++ b/work.html
@@ -149,7 +149,7 @@
                 />
                 <div class="project-description d-flex flex-column">
                   <h2>AI Poem Generator</h2>
-                  <p class="mb-4">
+                  <p class="mb-3">
                     This project gave me an introduction to AI prompt
                     engineering. The mission was to build an interactive text
                     generator using Axios and the SheCodes AI API. Including
@@ -190,7 +190,7 @@
                 />
                 <div class="project-description d-flex flex-column">
                   <h2>Pole Dance Project</h2>
-                  <p class="mb-4">
+                  <p class="mb-3">
                     Using developer tool VS Code, I built a HTML landing page
                     featuring CSS grids, transform properties and a linear
                     gradient. JavaScript class manipulation allowed me to create
@@ -223,7 +223,7 @@
                 />
                 <div class="project-description d-flex flex-column">
                   <h2>World Clock Project</h2>
-                  <p class="mb-4">
+                  <p class="mb-3">
                     !Dummy text. My first interactive application, I added
                     GitHub, hosting and API integration to my developer toolbox.
                     This app employs ES6, integrating a search engine, functions
@@ -278,9 +278,9 @@
                       target="_blank"
                       title="CodeSandbox Project Link"
                       ><img
-                        src="/logos/codeSandbox-square-logo.svg"
+                        src="/logos/code-sandbox.png"
                         alt="CodeSandbox Project Link"
-                        class="sandbox-logo"
+                        class="img-fluid slide-logos"
                     /></a>
                     <br />
                   </div>
@@ -296,7 +296,7 @@
                 />
                 <div class="project-description d-flex flex-column">
                   <h2>Lucky Dog Project</h2>
-                  <p class="mb-4">
+                  <p class="mb-3">
                     !Dummy text. Using developer tool VS Code, I built a HTML
                     landing page featuring CSS grids, transform properties and a
                     linear gradient. JavaScript class manipulation allowed me to
