Improved footer styling on smaller devices

--- a/index.html
+++ b/index.html
@@ -208,12 +208,17 @@
       <footer class="mt-5 mb-5">
         <div class="footer-section d-flex justify-content-between">
           <div class="align-self-center">
-            <a
-              href="mailto:lj.fryer.001@gmail.com"
-              class="footer-email"
-              title="email me"
-              ><i class="fa-solid fa-share"></i> lj.fryer.001@gmail.com</a
-            >
+            <div class="footer-email-container d-flex">
+              <a href="mailto:lj.fryer.001@gmail.com" title="email me"
+                ><i class="fa-solid fa-envelope footer-email-icon"></i
+              ></a>
+              <a
+                href="mailto:lj.fryer.001@gmail.com"
+                class="footer-email"
+                title="email me"
+                >lj.fryer.001@gmail.com</a
+              >
+            </div>
           </div>
           <div class="d-flex slide-links">
             <a href="https://github.com/" title="my github" target="_blank">
