--- a/index.html
+++ b/index.html
@@ -3,7 +3,13 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>LJ Fryer</title>
+    <meta
+      name="description"
+      content="LJ fryer is a front-end developer based in Sydney. A little background on me and a sample of my projects."
+    />
+    <title>
+      LJ Fryer Front End Developer Homepage https://lj-fryer.netlify.app/
+    </title>
 
     <link
       href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css"
@@ -34,8 +40,12 @@
       <header>
         <nav class="navbar navbar-expand-lg bg-primary-color">
           <div class="container-fluid">
-            <a class="navbar-brand active text-light" href="/" title="lj fyer">
-              <img src="/logos/ljf-logo.png" alt="lj fryer" class="ljf-logo" />
+            <a class="navbar-brand active text-light" href="/" title="Homepage">
+              <img
+                src="/logos/ljf-logo.png"
+                alt="lj fryer logo"
+                class="ljf-logo"
+              />
             </a>
             <button
               class="navbar-toggler bg-light text-light"
@@ -52,10 +62,10 @@
               <ul class="navbar-nav">
                 <li class="nav-item">
                   <a
-                    class="nav-link active text-light"
+                    class="nav-link text-light active"
                     aria-current="page"
                     href="/"
-                    title="home"
+                    title="Homepage"
                     ><i class="fa-solid fa-house fs-5"></i
                   ></a>
                 </li>
@@ -63,7 +73,7 @@
                   <a
                     class="nav-link text-light"
                     href="/about.html"
-                    title="about me"
+                    title="About LJ Fryer"
                     ><i class="fa-solid fa-circle-info fs-5"></i
                   ></a>
                 </li>
@@ -71,7 +81,7 @@
                   <a
                     class="nav-link text-light"
                     href="/work.html"
-                    title="my work"
+                    title="LJ Fryer's work"
                     ><i class="fa-solid fa-folder-open fs-5"></i
                   ></a>
                 </li>
@@ -79,7 +89,7 @@
                   <a
                     class="nav-link text-light"
                     href="/contact.html"
-                    title="say hi"
+                    title="Contact LJ Fryer"
                     ><i class="fa-regular fa-comments fs-5"></i
                   ></a>
                 </li>
@@ -138,6 +148,7 @@
                       href="https://weather-app-ljf.netlify.app/"
                       target="_blank"
                       class="project-link"
+                      title="Weather Forecast App"
                       >Weather Forecast</a
                     >
                     <br />
@@ -167,6 +178,7 @@
                       href="https://www.shecodes.io/cohorts/2203/projects/2466767?_gl=1*1hq72fe*_gcl_au*MTAxMzM5NjkwNy4xNzM0NDEzMDIx"
                       target="_blank"
                       class="project-link"
+                      title="AI Poem Generator"
                       >AI poem for you</a
                     >
                     <br />
@@ -196,6 +208,7 @@
                       href="https://www.shecodes.io/cohorts/1936/projects/2443518?_gl=1*hmg0f*_gcl_au*MTAxMzM5NjkwNy4xNzM0NDEzMDIx"
                       target="_blank"
                       class="project-link"
+                      title="Pole Dance Project"
                       >passion project</a
                     >
                   </div>
@@ -241,7 +254,7 @@
             </a>
             <a
               href="https://www.linkedin.com/in/linda-fryer-ba2294ba/"
-              title="my profile"
+              title="my linkedIn profile"
               target="_blank"
             >
               <i
@@ -251,6 +264,16 @@
             </a>
           </div>
         </div>
+        <p class="text-center footer-paragraph mt-5">
+          Website designed and coded by LJ Fryer.
+          <a
+            href="https://github.com/LJ-Fryer/portfolio-project-ljf"
+            title="Website Repository"
+          >
+            Open-sourced
+          </a>
+          on GitHub
+        </p>
       </footer>
     </div>
   </body>
