--- a/work.html
+++ b/work.html
@@ -3,7 +3,9 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>LJ Fryer</title>
+    <title>
+      My Work LJ Fryer Front End Developer https://lj-fryer.netlify.app/
+    </title>
 
     <link
       href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css"
@@ -34,8 +36,12 @@
       <header>
         <nav class="navbar navbar-expand-lg bg-primary-color">
           <div class="container-fluid">
-            <a class="navbar-brand active text-light" href="/" title="lj fyer">
-              <img src="/logos/ljf-logo.png" alt="lj fryer" class="ljf-logo" />
+            <a class="navbar-brand text-light" href="/" title="Homepage">
+              <img
+                src="/logos/ljf-logo.png"
+                alt="lj fryer logo"
+                class="ljf-logo"
+              />
             </a>
             <button
               class="navbar-toggler bg-light text-light"
@@ -55,7 +61,7 @@
                     class="nav-link text-light"
                     aria-current="page"
                     href="/"
-                    title="home"
+                    title="Homepage"
                     ><i class="fa-solid fa-house fs-5"></i
                   ></a>
                 </li>
@@ -63,15 +69,15 @@
                   <a
                     class="nav-link text-light"
                     href="/about.html"
-                    title="about me"
+                    title="About LJ Fryer"
                     ><i class="fa-solid fa-circle-info fs-5"></i
                   ></a>
                 </li>
                 <li class="nav-item">
                   <a
-                    class="nav-link active text-light"
+                    class="nav-link text-light active"
                     href="/work.html"
-                    title="my work"
+                    title="LJ Fryer's work"
                     ><i class="fa-solid fa-folder-open fs-5"></i
                   ></a>
                 </li>
@@ -79,7 +85,7 @@
                   <a
                     class="nav-link text-light"
                     href="/contact.html"
-                    title="say hi"
+                    title="Contact LJ Fryer"
                     ><i class="fa-regular fa-comments fs-5"></i
                   ></a>
                 </li>
@@ -327,12 +333,17 @@
       <footer class="mt-5 mb-5">
         <div class="footer-section d-flex justify-content-between">
           <div class="align-self-center">
-            <a
-              href="mailto:lj.fryer.001@gmail.com"
-              class="footer-email"
-              title="email me"
-              ><i class="fa-solid fa-share"></i> lj.fryer.001@gmail.com</a
-            >
+            <div class="footer-email-container d-flex">
+              <a href="mailto:lj.fryer.001@gmail.com" title="email me"
+                ><i class="fa-solid fa-envelope footer-email-icon"></i
+              ></a>
+              <a
+                href="mailto:lj.fryer.001@gmail.com"
+                class="footer-email"
+                title="email me"
+                >lj.fryer.001@gmail.com</a
+              >
+            </div>
           </div>
           <div class="d-flex slide-links">
             <a href="https://github.com/" title="my github" target="_blank">
@@ -355,7 +366,7 @@
             </a>
             <a
               href="https://www.linkedin.com/in/linda-fryer-ba2294ba/"
-              title="my profile"
+              title="my linkedIn profile"
               target="_blank"
             >
               <i
@@ -365,6 +376,16 @@
             </a>
           </div>
         </div>
+        <p class="text-center footer-paragraph mt-5">
+          Website designed and coded by LJ Fryer.
+          <a
+            href="https://github.com/LJ-Fryer/portfolio-project-ljf"
+            title="Website Repository"
+          >
+            Open-sourced
+          </a>
+          on GitHub
+        </p>
       </footer>
     </div>
   </body>
