Fixed empty alt text

--- a/about.html
+++ b/about.html
@@ -324,7 +324,7 @@
             >
               <img
                 src="/logos/netlify-logo-lightmode.png"
-                alt=""
+                alt="Netlify"
                 class="img-fluid footer-logos"
               />
             </a>
