--- a/contact.html
+++ b/contact.html
@@ -98,7 +98,7 @@
               <a href="mailto:lj.fryer.001@gmail.com" title="Email me"
                 ><i class="fa-solid fa-envelope"></i
               ></a>
-              <a href="#" title="Insta"
+              <a href="https://www.instagram.com/coding.yogi.7" title="Instagram"
                 ><i class="fa-brands fa-square-instagram"></i
               ></a>
               <a
@@ -123,7 +123,7 @@
                 />
               </a>
               <a href="https://github.com/" title="My GitHub"
-                ><img src="/logos/github-icon.svg" alt="" class="img-fluid slide-logos"></i
+                ><img src="/logos/github-icon.svg" alt="GitHub" class="img-fluid slide-logos"></i
               ></a>
               <a
                 href="https://app.netlify.com/teams/lj-fryer/sites"
@@ -169,7 +169,7 @@
             >
               <img
                 src="/logos/netlify-logo-lightmode.png"
-                alt=""
+                alt="Netlify"
                 class="img-fluid footer-logos"
               />
             </a>
