--- a/index.html
+++ b/index.html
@@ -248,7 +248,7 @@
             >
               <img
                 src="/logos/netlify-logo-lightmode.png"
-                alt=""
+                alt="Netlify"
                 class="img-fluid footer-logos"
               />
             </a>
