--- a/work.html
+++ b/work.html
@@ -360,7 +360,7 @@
             >
               <img
                 src="/logos/netlify-logo-lightmode.png"
-                alt=""
+                alt="Netlify"
                 class="img-fluid footer-logos"
               />
             </a>
