--- a/contact.html
+++ b/contact.html
@@ -114,7 +114,7 @@
                     <i class="fa-solid fa-chevron-down down-icon down-pointer"></i>
                 </div>
             </div>
-            <div class="coding-links d-flex mt-3">
+            <div class="coding-links d-flex mt-3 justify-content-center">
               <a href="https://www.shecodes.io/graduates/128619-linda-fryer" title="SheCodes Profile">
                 <img
                   src="/logos/shecodes-logo.png"
