--- a/about.html
+++ b/about.html
@@ -3,9 +3,11 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>
-      About LJ Fryer Front-end developer https://lj-fryer.netlify.app/
-    </title>
+    <meta
+      name="description"
+      content="Some fun facts about Front-end developer LJ Fryer. My toolkit including HTML5, CSS, JavaScript, Bootstrap, VS Code, GitHub and Netlify."
+    />
+    <title>About LJ lj-fryer.netlify.app/</title>
 
     <link
       href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css"
