--- a/contact.html
+++ b/contact.html
@@ -3,7 +3,8 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Contact LJ Fryer Front End Developer https://lj-fryer.netlify.app/</title>
+    <meta name="description" content="Contact Front-end developer LJ Fryer. Find my email, Instagram, LinkedIn, GitHub, Netlify and SheCodes profile.">
+    <title>Contact LJ Fryer lj-fryer.netlify.app/</title>
     <link
       href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css"
       rel="stylesheet"
