--- a/index.html
+++ b/index.html
@@ -7,9 +7,7 @@
       name="description"
       content="LJ fryer is a front-end developer based in Sydney. A little background on me and a sample of my projects."
     />
-    <title>
-      LJ Fryer Front End Developer Homepage https://lj-fryer.netlify.app/
-    </title>
+    <title>LJ Fryer Front-end Developer lj-fryer.netlify.app/</title>
 
     <link
       href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css"
