--- a/work.html
+++ b/work.html
@@ -3,9 +3,11 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>
-      My Work LJ Fryer Front End Developer https://lj-fryer.netlify.app/
-    </title>
+    <meta
+      name="description"
+      content="Front-end developer LJ Fryer's projects. Links to Netlify, GitHub, SheCodes, CodeSandbox."
+    />
+    <title>My Work LJ Fryer lj-fryer.netlify.app/</title>
 
     <link
       href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css"
