Amended text on index.html. Improved titles on <a>

--- a/contact.html
+++ b/contact.html
@@ -128,7 +128,7 @@
               ></a>
               <a
                 href="https://app.netlify.com/teams/lj-fryer/sites"
-                title="Netlify"
+                title="My Netlify"
               >
                 <img
                   src="/logos/netlify-logo-lightmode.png"
