--- a/index.html
+++ b/index.html
@@ -103,14 +103,13 @@
               <h1 class="name-title">LJ FRYER</h1>
               <div class="hero-paragraph">
                 <p>
-                  An experienced teacher with a lifelong passion for STEM, I
-                  decided to apply my attention to detail and problem solving
-                  skills to becoming a Front End Developer. Starting my journey
-                  with SheCodes ignited my passion for coding. Each SheCodes
-                  workshop culminates in a final project that showcases the
-                  skills, languages, tools and frameworks that bring me one step
-                  closer to creating aesthetically pleasing user interfaces that
-                  are intuitive and responsive.
+                  I’m a front-end developer based in Sydney, Australia,
+                  currently building my developer toolbox with SheCodes.io. My
+                  background as an early childhood teacher showcases my
+                  strengths in communication, teamwork and creative
+                  problem-solving. As a lifelong STEM enthusiast, coding is a
+                  natural fit for me and I thrive on creating responsive,
+                  user-friendly web experiences.
                 </p>
               </div>
             </div>
@@ -134,11 +133,11 @@
                 <div class="project-description d-flex flex-column">
                   <h2>Weather Project</h2>
                   <p class="mb-4">
-                    My first interactive application, I added GitHub, hosting
-                    and API integration to my developer toolbox. This app
-                    employs ES6, integrating a search engine, functions to
-                    extract data from the API and string interpolation to
-                    deliver a live, five day weather forecast.
+                    With my first interactive application, I added GitHub,
+                    hosting and API integration to my developer toolbox. This
+                    app employs ES6, integrating a search engine, functions to
+                    extract data from the API and template literals to deliver a
+                    live, five day weather forecast.
                   </p>
                   <br />
                   <div>
@@ -164,11 +163,11 @@
                 <div class="project-description d-flex flex-column">
                   <h2>AI Poem Generator</h2>
                   <p class="mb-4">
-                    This project gave me an introduction to AI prompt
-                    engineering. The mission was to build an interactive text
-                    generator using Axios and the SheCodes AI API. Including
-                    animations utilising JS plugin and CSS @keyframes rule, this
-                    app was a fun build.
+                    This project was my first foray into AI prompt engineering.
+                    The mission was to build an interactive text generator using
+                    Axios and the SheCodes AI API. Including animations
+                    utilising JS plugin and CSS @keyframes rule, this app was
+                    fun to build and experiment with.
                   </p>
                   <br />
                   <div>
@@ -188,7 +187,8 @@
               <div class="project-slides">
                 <img
                   src="/images/pole-page-img.png"
-                  class="project-image img-fluid"
+                  class="project-image pole-page-light img-fluid"
+                  id="pole-page-light"
                   alt="Pole dance project"
                 />
                 <div class="project-description d-flex flex-column">
