--- a/work.html
+++ b/work.html
@@ -119,8 +119,8 @@
                     My first interactive application, I added GitHub, hosting
                     and API integration to my developer toolbox. This app
                     employs ES6, integrating a search engine, functions to
-                    extract data from the API and string interpolation to
-                    deliver a live, five day weather forecast.
+                    extract data from the API and template literals to deliver a
+                    live, five day weather forecast.
                     <br />
                   </p>
 
@@ -158,11 +158,11 @@
                 <div class="project-description d-flex flex-column">
                   <h2>AI Poem Generator</h2>
                   <p class="mb-3">
-                    This project gave me an introduction to AI prompt
-                    engineering. The mission was to build an interactive text
-                    generator using Axios and the SheCodes AI API. Including
-                    animations utilising JS plugin and CSS @keyframes rule, this
-                    app was a fun build.
+                    This project was my first foray into AI prompt engineering.
+                    The mission was to build an interactive text generator using
+                    Axios and the SheCodes AI API. Including animations
+                    utilising JS plugin and CSS @keyframes rule, this app was a
+                    fun build.
                     <br />
                   </p>
                   <div class="d-flex slide-links">
