--- a/about.html
+++ b/about.html
@@ -7,7 +7,7 @@
       name="description"
       content="Some fun facts about Front-end developer LJ Fryer. My toolkit including HTML5, CSS, JavaScript, Bootstrap, VS Code, GitHub and Netlify."
     />
-    <title>About LJ lj-fryer.netlify.app/</title>
+    <title>About LJ Fryer lj-fryer.netlify.app/</title>
 
     <link
       href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css"
@@ -31,6 +31,7 @@
       src="https://kit.fontawesome.com/552f79f5ce.js"
       crossorigin="anonymous"
     ></script>
+    <script src="/src/index.js"></script>
   </head>
   <body>
     <div class="container">
