Added google analytics tags to each html page.

--- a/contact.html
+++ b/contact.html
@@ -1,6 +1,14 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-XHYMHB8ZNS"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'G-XHYMHB8ZNS');
+</script>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta name="description" content="Contact Front-end developer LJ Fryer. Find my email, Instagram, LinkedIn, GitHub, Netlify and SheCodes profile.">
