--- a/work.html
+++ b/work.html
@@ -1,6 +1,19 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
+    <script
+      async
+      src="https://www.googletagmanager.com/gtag/js?id=G-XHYMHB8ZNS"
+    ></script>
+    <script>
+      window.dataLayer = window.dataLayer || [];
+      function gtag() {
+        dataLayer.push(arguments);
+      }
+      gtag("js", new Date());
+
+      gtag("config", "G-XHYMHB8ZNS");
+    </script>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta
@@ -116,9 +129,9 @@
                 <div class="project-description d-flex flex-column">
                   <h2>Weather Project</h2>
                   <p class="mb-4">
-                    My first interactive application, I added GitHub, hosting
-                    and API integration to my developer toolbox. This app
-                    employs ES6, integrating a search engine, functions to
+                    With my first interactive application, I added GitHub,
+                    hosting and API integration to my developer toolbox. This
+                    app employs ES6, integrating a search engine, functions to
                     extract data from the API and template literals to deliver a
                     live, five day weather forecast.
                     <br />
@@ -161,8 +174,8 @@
                     This project was my first foray into AI prompt engineering.
                     The mission was to build an interactive text generator using
                     Axios and the SheCodes AI API. Including animations
-                    utilising JS plugin and CSS @keyframes rule, this app was a
-                    fun build.
+                    utilising JS plugin and CSS @keyframes rule, this app was
+                    fun to build and experiment with.
                     <br />
                   </p>
                   <div class="d-flex slide-links">
