Updated text on hero. Added all project descriptions, on index and work pages

--- a/work.html
+++ b/work.html
@@ -171,11 +171,11 @@
                 <div class="project-description d-flex flex-column">
                   <h2>AI Poem Generator</h2>
                   <p class="mb-3">
-                    This project was my first foray into AI prompt engineering.
-                    The mission was to build an interactive text generator using
-                    Axios and the SheCodes AI API. Including animations
-                    utilising JS plugin and CSS @keyframes rule, this app was
-                    fun to build and experiment with.
+                    The mission was to create an interactive text generator
+                    using Axios and the SheCodes AI API. Featuring animations
+                    powered by a JavaScript plugin and the CSS @keyframes rule,
+                    this app was fun to build and a great opportunity to
+                    experiment with creative coding techniques.
                     <br />
                   </p>
                   <div class="d-flex slide-links">
@@ -212,11 +212,11 @@
                 <div class="project-description d-flex flex-column">
                   <h2>Pole Dance Project</h2>
                   <p class="mb-3">
-                    Using developer tool VS Code, I built a HTML landing page
-                    featuring CSS grids, transform properties and a linear
-                    gradient. JavaScript class manipulation allowed me to create
-                    a light/dark theme option on the page. Click image for dark
-                    theme.
+                    Using VS Code, I built an HTML landing page featuring CSS
+                    grids, transform properties, and a linear gradient.
+                    JavaScript class manipulation allowed me to implement a
+                    light/dark theme toggle, adding interactivity to the page.
+                    Click the image to switch to the dark theme.
                     <br />
                   </p>
                   <div class="d-flex slide-links">
@@ -245,11 +245,11 @@
                 <div class="project-description d-flex flex-column">
                   <h2>World Clock Project</h2>
                   <p class="mb-3">
-                    !Dummy text. My first interactive application, I added
-                    GitHub, hosting and API integration to my developer toolbox.
-                    This app employs ES6, integrating a search engine, functions
-                    to extract data from the API and string interpolation to
-                    deliver a live, five day weather forecast.
+                    With this project, I expanded my JavaScript skills by adding
+                    advanced functionality to my developer toolbox. This app
+                    uses ES6 to integrate dynamic time zones, user input, and
+                    real-time data updates, delivering an interactive and fully
+                    functional world clock experience.
                     <br />
                   </p>
                   <div class="d-flex slide-links">
@@ -286,11 +286,11 @@
                 <div class="project-description d-flex flex-column">
                   <h2>AI Joke Generator</h2>
                   <p class="mb-3">
-                    !Dummy text. This project gave me an introduction to AI
-                    prompt engineering. The mission was to build an interactive
-                    text generator using Axios and the SheCodes AI API.
-                    Including animations utilising JS plugin and CSS @keyframes
-                    rule, this app was a fun build.
+                    My first foray into AI prompt engineering, this project
+                    combines creativity and code to deliver humour at the click
+                    of a button. Using Axios and the SheCodes AI API, this app
+                    generates jokes dynamically, enhanced with smooth animations
+                    via a JavaScript plugin and CSS @keyframes rule.
                     <br />
                   </p>
                   <div class="d-flex slide-links">
@@ -318,11 +318,12 @@
                 <div class="project-description d-flex flex-column">
                   <h2>Lucky Dog Project</h2>
                   <p class="mb-3">
-                    !Dummy text. Using developer tool VS Code, I built a HTML
-                    landing page featuring CSS grids, transform properties and a
-                    linear gradient. JavaScript class manipulation allowed me to
-                    create a light/dark theme option on the page. Click image
-                    for dark theme.
+                    Using VS Code, I created a landing page to share a snapshot
+                    of my best boi Lucky, who was by my side for almost 17
+                    years. The page showcases HTML, CSS, and JavaScript,
+                    featuring a responsive layout with flexbox and custom
+                    animations. Interactive elements include links to rescue pet
+                    organisations.
                     <br />
                   </p>
                   <div class="d-flex">
