--- a/index.html
+++ b/index.html
@@ -176,11 +176,11 @@
                 <div class="project-description d-flex flex-column">
                   <h2>AI Poem Generator</h2>
                   <p class="mb-4">
-                    This project was my first foray into AI prompt engineering.
-                    The mission was to build an interactive text generator using
-                    Axios and the SheCodes AI API. Including animations
-                    utilising JS plugin and CSS @keyframes rule, this app was
-                    fun to build and experiment with.
+                    The mission was to create an interactive text generator
+                    using Axios and the SheCodes AI API. Featuring animations
+                    powered by a JavaScript plugin and the CSS @keyframes rule,
+                    this app was fun to build and a great opportunity to
+                    experiment with creative coding techniques.
                   </p>
                   <br />
                   <div>
@@ -207,11 +207,11 @@
                 <div class="project-description d-flex flex-column">
                   <h2>Pole Dance Project</h2>
                   <p class="mb-4">
-                    Using developer tool VS Code, I built a HTML landing page
-                    featuring CSS grids, transform properties and a linear
-                    gradient. JavaScript class manipulation allowed me to create
-                    a light/dark theme option on the page. Click image for dark
-                    theme.
+                    Using VS Code, I built an HTML landing page featuring CSS
+                    grids, transform properties, and a linear gradient.
+                    JavaScript class manipulation allowed me to implement a
+                    light/dark theme toggle, adding interactivity to the page.
+                    Click the image to switch to the dark theme.
                   </p>
                   <br />
                   <div>
