Finalised text on about, work and index pages

--- a/about.html
+++ b/about.html
@@ -122,14 +122,26 @@
             </div>
             <div class="about-me-paragraph">
               <p>
-                !Dummy text - An experienced teacher with a lifelong passion for
-                STEM, I decided to apply my attention to detail and problem
-                solving skills to becoming a Front End Developer. Starting my
-                journey with SheCodes ignited my passion for coding. Each
-                SheCodes workshop culminates in a final project that showcases
-                the skills, languages, tools and frameworks that bring me one
-                step closer to creating aesthetically pleasing user interfaces
-                that are intuitive and responsive.
+                When I’m not finding new ways to be upside down or fangirling
+                over animals, you’ll catch me nerding out over puzzles (looking
+                at you, NYT’s games), binging true crime and science podcasts,
+                or perfecting my latest coding project.
+              </p>
+              <p>
+                My favourite city (and former home) is Tokyo, where the iconic
+                Japanese design aesthetic left a lasting impression on me. It
+                inspires my passion for creating digital experiences that
+                balance beauty and functionality. I also enjoy learning Japanese
+                on Duolingo (でも私の日本語は下手です).
+              </p>
+              <p>
+                Coding combines my love of problem-solving, creativity, and
+                lifelong learning. I’m excited to keep experimenting and
+                building my developer toolkit
+                <a href="/about.html#toolkit" title="Jump to toolkit"
+                  ><i class="fa-solid fa-toolbox"></i
+                ></a>
+                in pursuit of clean, efficient code.
               </p>
             </div>
           </div>
@@ -154,7 +166,7 @@
           </h2>
         </div>
 
-        <div class="skills-container">
+        <div class="skills-container" id="toolkit">
           <div class="toolkit">
             <div class="row">
               <div class="col-4 col-md-2">
