--- a/index.html
+++ b/index.html
@@ -117,12 +117,17 @@
               <div class="hero-paragraph">
                 <p>
                   I’m a front-end developer based in Sydney, Australia,
-                  currently building my developer toolbox with SheCodes.io. My
-                  background as an early childhood teacher showcases my
+                  currently building my developer toolbox with
+                  <a
+                    href="https://www.shecodes.io/"
+                    target="_blank"
+                    title="Go to SheCodes.io"
+                    >SheCodes.io</a
+                  >. My background as an early childhood teacher showcases my
                   strengths in communication, teamwork and creative
-                  problem-solving. As a lifelong STEM enthusiast, coding is a
-                  natural fit for me and I thrive on creating responsive,
-                  user-friendly web experiences.
+                  problem-solving. As a lifelong STEM enthusiast with an
+                  analytical mindset, coding is a natural fit for me and I
+                  thrive on creating responsive, user-friendly web experiences.
                 </p>
               </div>
             </div>
@@ -177,7 +182,7 @@
                   <h2>AI Poem Generator</h2>
                   <p class="mb-4">
                     The mission was to create an interactive text generator
-                    using Axios and the SheCodes AI API. Featuring animations
+                    using Axios and API integration. Featuring animations
                     powered by a JavaScript plugin and the CSS @keyframes rule,
                     this app was fun to build and a great opportunity to
                     experiment with creative coding techniques.
