--- a/work.html
+++ b/work.html
@@ -172,7 +172,7 @@
                   <h2>AI Poem Generator</h2>
                   <p class="mb-3">
                     The mission was to create an interactive text generator
-                    using Axios and the SheCodes AI API. Featuring animations
+                    using Axios and API integration. Featuring animations
                     powered by a JavaScript plugin and the CSS @keyframes rule,
                     this app was fun to build and a great opportunity to
                     experiment with creative coding techniques.
