Improving class names for readability

--- a/index.html
+++ b/index.html
@@ -113,7 +113,7 @@
         <div class="hero">
           <div class="hero-inner d-flex">
             <div class="hero-text d-flex flex-column justify-content-center">
-              <h1 class="name-title">LJ FRYER</h1>
+              <h1 class="hero-title">LJ FRYER</h1>
               <div class="hero-paragraph">
                 <p>
                   I’m a front-end developer based in Sydney, Australia,
@@ -139,10 +139,10 @@
           </div>
         </div>
         <h3 class="text-center p-2 mt-3 mb-3">A sample of my projects</h3>
-        <div class="homepage">
+        <div class="projects">
           <div class="row">
             <div class="col-lg-4">
-              <div class="project-slides">
+              <div class="project-card">
                 <img
                   src="/images/weather-app-img.png"
                   class="project-image img-fluid"
@@ -172,7 +172,7 @@
               </div>
             </div>
             <div class="col-lg-4">
-              <div class="project-slides">
+              <div class="project-card">
                 <img
                   src="/images/ai-poem-generator-img.png"
                   class="project-image img-fluid"
@@ -202,7 +202,7 @@
               </div>
             </div>
             <div class="col-lg-4">
-              <div class="project-slides">
+              <div class="project-card">
                 <img
                   src="/images/pole-page-img.png"
                   class="project-image pole-page-light img-fluid"
@@ -235,19 +235,17 @@
         </div>
       </main>
       <footer class="mt-5 mb-5">
-        <div class="footer-section d-flex justify-content-between">
-          <div class="align-self-center">
-            <div class="footer-email-container d-flex">
-              <a href="mailto:lj.fryer.001@gmail.com" title="email me"
-                ><i class="fa-solid fa-envelope footer-email-icon"></i
-              ></a>
-              <a
-                href="mailto:lj.fryer.001@gmail.com"
-                class="footer-email"
-                title="email me"
-                >lj.fryer.001@gmail.com</a
-              >
-            </div>
+        <div class="footer-inner d-flex justify-content-between">
+          <div class="footer-email-container align-self-center d-flex">
+            <a href="mailto:lj.fryer.001@gmail.com" title="email me"
+              ><i class="fa-solid fa-envelope footer-email-icon"></i
+            ></a>
+            <a
+              href="mailto:lj.fryer.001@gmail.com"
+              class="footer-email"
+              title="email me"
+              >lj.fryer.001@gmail.com</a
+            >
           </div>
           <div class="d-flex slide-links">
             <a href="https://github.com/" title="my github" target="_blank">
