--- a/about.html
+++ b/about.html
@@ -323,19 +323,17 @@
         </div>
       </main>
       <footer class="mt-5 mb-5">
-        <div class="footer-section d-flex justify-content-between">
-          <div class="align-self-center">
-            <div class="footer-email-container d-flex">
-              <a href="mailto:lj.fryer.001@gmail.com" title="email me"
-                ><i class="fa-solid fa-envelope footer-email-icon"></i
-              ></a>
-              <a
-                href="mailto:lj.fryer.001@gmail.com"
-                class="footer-email"
-                title="email me"
-                >lj.fryer.001@gmail.com</a
-              >
-            </div>
+        <div class="footer-inner d-flex justify-content-between">
+          <div class="footer-email-container align-self-center d-flex">
+            <a href="mailto:lj.fryer.001@gmail.com" title="email me"
+              ><i class="fa-solid fa-envelope footer-email-icon"></i
+            ></a>
+            <a
+              href="mailto:lj.fryer.001@gmail.com"
+              class="footer-email"
+              title="email me"
+              >lj.fryer.001@gmail.com</a
+            >
           </div>
           <div class="d-flex slide-links">
             <a href="https://github.com/" title="my github" target="_blank">
