--- a/work.html
+++ b/work.html
@@ -120,7 +120,7 @@
         <div class="my-work">
           <div class="row mb-4">
             <div class="col-lg-4">
-              <div class="project-slides">
+              <div class="project-card">
                 <img
                   src="/images/weather-app-img.png"
                   class="project-image img-fluid"
@@ -162,7 +162,7 @@
               </div>
             </div>
             <div class="col-lg-4">
-              <div class="project-slides">
+              <div class="project-card">
                 <img
                   src="/images/ai-poem-generator-img.png"
                   class="project-image img-fluid"
@@ -203,7 +203,7 @@
               </div>
             </div>
             <div class="col-lg-4">
-              <div class="project-slides">
+              <div class="project-card">
                 <img
                   src="/images/pole-page-dark-image.png"
                   class="project-image img-fluid"
@@ -236,7 +236,7 @@
           </div>
           <div class="row">
             <div class="col-lg-4">
-              <div class="project-slides">
+              <div class="project-card">
                 <img
                   src="/images/world-clock-image.png"
                   class="project-image img-fluid"
@@ -277,7 +277,7 @@
               </div>
             </div>
             <div class="col-lg-4">
-              <div class="project-slides">
+              <div class="project-card">
                 <img
                   src="/images/ai-joke-generator.png"
                   class="project-image img-fluid"
@@ -309,7 +309,7 @@
               </div>
             </div>
             <div class="col-lg-4">
-              <div class="project-slides">
+              <div class="project-card">
                 <img
                   src="/images/lucky-project-image.png"
                   class="project-image img-fluid"
@@ -347,19 +347,17 @@
         </div>
       </main>
       <footer class="mt-5 mb-5">
-        <div class="footer-section d-flex justify-content-between">
-          <div class="align-self-center">
-            <div class="footer-email-container d-flex">
-              <a href="mailto:lj.fryer.001@gmail.com" title="email me"
-                ><i class="fa-solid fa-envelope footer-email-icon"></i
-              ></a>
-              <a
-                href="mailto:lj.fryer.001@gmail.com"
-                class="footer-email"
-                title="email me"
-                >lj.fryer.001@gmail.com</a
-              >
-            </div>
+        <div class="footer-inner d-flex justify-content-between">
+          <div class="footer-email-container align-self-center d-flex">
+            <a href="mailto:lj.fryer.001@gmail.com" title="email me"
+              ><i class="fa-solid fa-envelope footer-email-icon"></i
+            ></a>
+            <a
+              href="mailto:lj.fryer.001@gmail.com"
+              class="footer-email"
+              title="email me"
+              >lj.fryer.001@gmail.com</a
+            >
           </div>
           <div class="d-flex slide-links">
             <a href="https://github.com/" title="my github" target="_blank">
