Improved footer class names

--- a/about.html
+++ b/about.html
@@ -324,15 +324,16 @@
       </main>
       <footer class="mt-5 mb-5">
         <div class="footer-inner d-flex justify-content-between">
-          <div class="footer-email-container align-self-center d-flex">
+          <div class="footer-email-box align-self-center d-flex">
             <a href="mailto:lj.fryer.001@gmail.com" title="email me"
               ><i class="fa-solid fa-envelope footer-email-icon"></i
             ></a>
             <a
               href="mailto:lj.fryer.001@gmail.com"
-              class="footer-email"
+              class="footer-email-link"
               title="email me"
-              >lj.fryer.001@gmail.com</a
+            >
+              lj.fryer.001@gmail.com</a
             >
           </div>
           <div class="d-flex slide-links">
